# cube-renderer

./: CMakeLists.txt  README.md
include/: camera.h  io.h  shader_helper.h  shader_program.h  shader_program.inl  texture.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb_image/: CMakeLists.txt
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: camera.cpp  io.cpp  main.cpp  shader_helper.cpp  texture.cpp
